#
# Copyright (c) 2022 INRIA
#

IF(BUILD_WITH_AUTODIFF_SUPPORT)
  FUNCTION(ADD_PINOCCHIO_CPP_AUTODIFF_EXAMPLE EXAMPLE)
    INCLUDE_DIRECTORIES(SYSTEM ${cppadcg_INCLUDE_DIR})
    ADD_PINOCCHIO_CPP_EXAMPLE(${EXAMPLE})
    SET_PROPERTY(TARGET example-cpp-${EXAMPLE} PROPERTY CXX_STANDARD 11)
    TARGET_LINK_LIBRARIES(example-cpp-${EXAMPLE} PUBLIC ${CMAKE_DL_LIBS})
  ENDFUNCTION()
  
  ADD_PINOCCHIO_CPP_AUTODIFF_EXAMPLE(autodiff-rnea)

  IF(BUILD_PYTHON_INTERFACE)
    SET(${PROJECT_NAME}_AUTODIFF_PYTHON_EXAMPLES
      autodiff-rnea
       )

    FOREACH(EXAMPLE ${${PROJECT_NAME}_AUTODIFF_PYTHON_EXAMPLES})
      ADD_PYTHON_UNIT_TEST("example-py-${EXAMPLE}" "examples/autodiff/${EXAMPLE}.py" "bindings/python")
    ENDFOREACH(EXAMPLE ${${PROJECT_NAME}_AUTODIFF_PYTHON_EXAMPLES})
  ENDIF(BUILD_PYTHON_INTERFACE)

ENDIF(BUILD_WITH_AUTODIFF_SUPPORT)
