#
# Copyright (c) 2020-2023 INRIA
#

IF(cppadcg_FOUND AND BUILD_WITH_CODEGEN_SUPPORT AND BUILD_WITH_URDF_SUPPORT)
  FUNCTION(ADD_PINOCCHIO_CPP_CODEGEN_EXAMPLE EXAMPLE)
    ADD_PINOCCHIO_CPP_EXAMPLE(${EXAMPLE} CPPADCG PARSERS)
    SET_PROPERTY(TARGET example-cpp-${EXAMPLE} PROPERTY CXX_STANDARD 11)
    TARGET_LINK_LIBRARIES(example-cpp-${EXAMPLE} PUBLIC ${CMAKE_DL_LIBS})
    TARGET_COMPILE_DEFINITIONS(example-cpp-${EXAMPLE} PUBLIC PINOCCHIO_CXX_COMPILER=\"${CMAKE_CXX_COMPILER}\")
  ENDFUNCTION()
  
  ADD_PINOCCHIO_CPP_CODEGEN_EXAMPLE(codegen-crba)
  ADD_PINOCCHIO_CPP_CODEGEN_EXAMPLE(codegen-rnea)

  IF(BUILD_PYTHON_INTERFACE)
    SET(${PROJECT_NAME}_CODEGEN_PYTHON_EXAMPLES
      codegen-rnea
       )

    FOREACH(EXAMPLE ${${PROJECT_NAME}_CODEGEN_PYTHON_EXAMPLES})
      SET(EXAMPLE_NAME "example-py-${EXAMPLE}")
      ADD_PYTHON_UNIT_TEST(${EXAMPLE_NAME} "examples/codegen/${EXAMPLE}.py" "bindings/python")
      ADD_WINDOWS_DLL_PATH_TO_TEST(${EXAMPLE_NAME})
    ENDFOREACH(EXAMPLE ${${PROJECT_NAME}_CODEGEN_PYTHON_EXAMPLES})
  ENDIF(BUILD_PYTHON_INTERFACE)

ENDIF(cppadcg_FOUND AND BUILD_WITH_CODEGEN_SUPPORT AND BUILD_WITH_URDF_SUPPORT)
