#
# Copyright (c) 2021 INRIA
#

# Automatic differentiation
MACRO(ADD_CPPAD_UNIT_TEST name)
  INCLUDE_DIRECTORIES(SYSTEM ${cppad_INCLUDE_DIR})
  ADD_PINOCCHIO_UNIT_TEST(${name} PACKAGES cppad)
  ADD_DEPENDENCIES(test-cppad test-cpp-cppad-${name})
  TARGET_LINK_LIBRARIES(test-cpp-cppad-${name} PUBLIC ${cppad_LIBRARY})
ENDMACRO()

IF(BUILD_WITH_AUTODIFF_SUPPORT)
  ADD_CUSTOM_TARGET(test-cppad)
  SET_TARGET_PROPERTIES(test-cppad PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD True)

  ADD_CPPAD_UNIT_TEST(basic)
  ADD_CPPAD_UNIT_TEST(spatial)
  ADD_CPPAD_UNIT_TEST(joints)
  ADD_CPPAD_UNIT_TEST(algorithms)
  ADD_CPPAD_UNIT_TEST(derivatives)
  ADD_CPPAD_UNIT_TEST(joint-configurations)
ENDIF(BUILD_WITH_AUTODIFF_SUPPORT)
